Tranlate to english

--- a/Pro1.ipynb
+++ b/Pro1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "457febcd",
    "metadata": {},
    "outputs": [
@@ -63,10 +63,10 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Cargar el archivo CSV \n",
+    "# Upload the CSV file\n",
     "df = pd.read_csv(\"WHO.csv\")\n",
     "\n",
-    "# Mostrar las primeras filas para verificar la carga\n",
+    "\n",
     "print(df.head())  \n",
     "\n"
    ]
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c066e508",
    "metadata": {},
    "outputs": [
@@ -519,19 +519,15 @@
     }
    ],
    "source": [
-    "# 1. Eliminar valores nulos\n",
+    "# 1. Delete null values\n",
     "df_cleaned = df.dropna()\n",
     "\n",
-    "# 2. Eliminar la columna \"status\"\n",
-    "#df_dropped = df_cleaned.drop(columns=['Status'], errors='ignore')  # Evita errores si la columna no existe\n",
+    "# 2. Convert ‘Country’ and ‘Status’ column to binary variables (One-Hot Encoding)\n",
     "\n",
-    "# 3. Convertir la columna \"Country\" en variables binarias (One-Hot Encoding)\n",
-    "#df_encoded = pd.get_dummies(df_dropped, columns=['Country'])\n",
     "df_encoded = pd.get_dummies(df_cleaned, columns=['Status', 'Country'], dtype=int)\n",
-    "# 4. Resultado final\n",
-    "df_final = df_encoded\n",
     "\n",
-    "# Ver el resultado\n",
+    "# 3. Final result\n",
+    "df_final = df_encoded\n",
     "print(df_final.head())\n"
    ]
   },
@@ -560,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e829f159",
    "metadata": {},
    "outputs": [
@@ -578,7 +574,7 @@
    "source": [
     "import seaborn as sns\n",
     "plt.figure(figsize=(8,5))\n",
-    "sns.histplot(df_final[\"Life expectancy \"], bins=10, kde=True)  # `kde=True` añade una curva de densidad\n",
+    "sns.histplot(df_final[\"Life expectancy \"], bins=10, kde=True)  \n",
     "plt.xlabel(\"Life expectancy/years\")\n",
     "plt.ylabel(\"Frequency \")\n",
     "plt.title(\"Distribution of life expectancy \")\n",
@@ -587,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3ba748e5",
    "metadata": {},
    "outputs": [
@@ -603,7 +599,7 @@
     }
    ],
    "source": [
-    "df_final.hist(bins=50, figsize=(20,20))\n",
+    "df_final.hist(bins=10, figsize=(50,50))\n",
     "plt.show()"
    ]
   },
@@ -642,26 +638,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "4dc03ece",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculamos la matriz de correlación\n",
+    "#Calculate the correlation matrix\n",
     "corr_matrix = df_final.corr()\n",
     "\n",
-    "# Seleccionamos las 10 variables más correlacionadas con 'Life expectancy'\n",
+    "# Select the 10 most correlated variables with ‘Life expectancy’\n",
     "selected_features = corr_matrix[\"Life expectancy \"].abs().sort_values(ascending=False).index[1:20]\n",
     "\n",
-    "# Definimos las variables predictoras y la variable objetivo\n",
+    "# Defines the predictor variables and the target variable\n",
     "X = df_final[selected_features]\n",
     "y = df_final[\"Life expectancy \"]\n",
     "\n",
-    "# Dividimos en datos de entrenamiento y prueba\n",
+    "# Split into training and test data\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Escalamos las características\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
@@ -670,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bc4cab62",
    "metadata": {},
    "outputs": [
@@ -687,27 +682,27 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score, root_mean_squared_error, precision_score, recall_score\n",
     "\n",
-    "# Crear y entrenar el modelo\n",
+    "# Create and train the model\n",
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Hacer predicciones\n",
+    "# Make predictions\n",
     "y_pred_test = model.predict(X_test)\n",
     "y_pred_train = model.predict(X_train)\n",
     "\n",
-    "# Evaluar el modelo\n",
+    "# Evaluate the model\n",
     "r2_test = r2_score(y_test, y_pred_test)\n",
     "rmse_test = root_mean_squared_error(y_test, y_pred_test)\n",
     "\n",
     "print(f\"R²_test: {r2_test}\")\n",
     "print(f\"RMSE_test: {rmse_test}\")\n",
-    "# R²_test = 0.805 → El modelo explica el 80.5% de la variabilidad en el conjunto de prueba.\n",
-    "# RMSE_test = 3.72 → El error medio en las predicciones es de 3.72 unidades en Life expectancy.\n"
+    "# R²_test = 0.805 → The model explains 80.5% of the variability in the test set.\n",
+    "# RMSE_test = 3.72 → The average error in the predictions is 3.72 units in Life expectancy.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "220d6e68",
    "metadata": {},
    "outputs": [
@@ -725,13 +720,13 @@
     "rmse_train = root_mean_squared_error(y_train, y_pred_train)\n",
     "print(f\"R²_train: {r2_train}\")\n",
     "print(f\"RMSE_train: {rmse_train}\")\n",
-    "# R²_train = 0.833 → El modelo explica el 83.3% de la variabilidad en el entrenamiento.\n",
-    "# RMSE_train = 3.63 → Similar a RMSE_test, lo que indica buen balance entre train y test (sin overfitting extremo)."
+    "# R²_train = 0.833 → The model explains 83.3% of the variability in training\n",
+    "# RMSE_train = 3.63 → Similar to RMSE_test, indicating good balance between train and test (no extreme overfitting)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "73400802",
    "metadata": {},
    "outputs": [
@@ -754,13 +749,13 @@
     }
    ],
    "source": [
-    "# Obtener los coeficientes absolutos\n",
+    "# Obtain absolute coefficients\n",
     "coeficientes = np.abs(model.coef_)\n",
     "\n",
-    "# Crear un DataFrame con nombres de variables\n",
+    "# Create a DataFrame with variable names\n",
     "coef_df = pd.DataFrame({\"Variable\": X.columns, \"Coeficiente\": coeficientes})\n",
     "\n",
-    "# Ordenar y seleccionar los 10 más significativos\n",
+    "# Order and select the 10 most significant\n",
     "top_10 = coef_df.sort_values(by=\"Coeficiente\", ascending=False).head(10)\n",
     "\n",
     "print(top_10)\n"
@@ -772,7 +767,15 @@
    "id": "1fcffda8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Schooling: An additional year of schooling could be associated with a considerable change (2.88 units) in life expectancy.\n",
+    "#HIV/AIDS: An increase in this variable (percentage of population affected, for example) could be associated with a change of up to 2.84 years in life expectancy.\n",
+    "Adult Mortality: Each increase in this rate is associated with a change of 2.12 years in life expectancy.\n",
+    "#Income Composition of Resources: The higher the income index, the better the living conditions and the longer the life expectancy.\n",
+    "#Percentage Expenditure: Countries that invest more in public health tend to have better health care systems and thus longer life expectancy.\n",
+    "#An increase in this expenditure is associated with a change of approximately 0.84 years in life expectancy.\n",
+    "#Alcohol: The higher the alcohol consumption, the lower the life expectancy. "
+   ]
   }
  ],
  "metadata": {
