--- a/Pro1.ipynb
+++ b/Pro1.ipynb
@@ -770,7 +770,7 @@
    "source": [
     "# Schooling: An additional year of schooling could be associated with a considerable change (2.88 units) in life expectancy.\n",
     "#HIV/AIDS: An increase in this variable (percentage of population affected, for example) could be associated with a change of up to 2.84 years in life expectancy.\n",
-    "Adult Mortality: Each increase in this rate is associated with a change of 2.12 years in life expectancy.\n",
+    "#Adult Mortality: Each increase in this rate is associated with a change of 2.12 years in life expectancy.\n",
     "#Income Composition of Resources: The higher the income index, the better the living conditions and the longer the life expectancy.\n",
     "#Percentage Expenditure: Countries that invest more in public health tend to have better health care systems and thus longer life expectancy.\n",
     "#An increase in this expenditure is associated with a change of approximately 0.84 years in life expectancy.\n",
